2011-07-31  Dave Abrahams  <dave@boostpro.com>  (tiny change)

	* gnus-sum.el (gnus-summary-refer-thread): Since lambdas aren't
	closures, quote the form properly (bug#9194).

2011-07-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-insert-new-articles): Clean up slightly.
	(gnus-summary-insert-new-articles): Protect against servers that are
	down.

2011-07-29  Daniel Dehennin  <daniel.dehennin@baby-gnu.org>

	* mm-decode.el (mm-dissect-buffer): Add a default content-disposition
	in mm handle if none is specified.

2011-07-24  Andrew Cohen  <cohen@andy.bu.edu>

	* nnimap.el (nnimap-make-thread-query): Quote message-ids for gmail.

2011-07-23  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-search-thread): New function to make an nnir group
	based on a thread query.

	* gnus-sum.el (gnus-refer-thread-use-nnir): New variable to control use
	of nnir in thread referral.
	(gnus-summary-refer-thread): Use it.

	* nnimap.el (nnimap-request-thread): Use it.

2011-07-20  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-comment): Ignore HTML comments.

2011-07-20  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (gnus-group-make-nnir-group): Allow optional search query
	argument.

	(gnus-group-make-nnir-group,nnir-request-group,nnir-run-query): Use
	`nnir-address' to handle server info rather than passing an arg.

	* nnimap.el (nnimap-make-thread-query): New utility function to format
	an imap thread search query.
	(nnimap-request-thread): Use it.

	* gnus-sum.el (gnus-handle-ephemeral-exit): Ensure we are setting the
	right select-method if we are not going back to the group buffer.

2011-07-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-read-ephemeral-group): Make sure we don't
	enter invalid buffer configurations into the quit form (bug#9107).
	(gnus-group-tool-bar-gnome): Replace connect/disconnect with
	unplugged/plugged.

	* gnus-sum.el (gnus-summary-refer-thread): When inserting new headers,