@@ -1,3 +1,7 @@
+2011-07-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* spam.el (spam-fetch-field-fast): Rewrite slightly for clarity.
+
 2011-07-31  Dave Abrahams  <dave@boostpro.com>  (tiny change)
 
 	* gnus-sum.el (gnus-summary-refer-thread): Since lambdas aren't
